--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_auth: ^6.1.2
   camera: ^0.11.3
   permission_handler: ^12.0.1
+  camera_web: ^0.3.5+2
+  url_launcher: ^6.2.5
+  speech_to_text: ^6.6.2
 
 dev_dependencies:
   flutter_test:
