--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   permission_handler: ^12.0.1
   camera_web: ^0.3.5+2
   url_launcher: ^6.2.5
-  speech_to_text: ^6.6.2
+  http: ^1.2.0
+  record: ^5.0.7
 
 dev_dependencies:
   flutter_test:
