--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   camera_web: ^0.3.5+2
   url_launcher: ^6.2.5
   speech_to_text: ^7.3.0
+  record: ^6.1.2
+  web_socket_channel: ^3.0.3
+  http: ^1.6.0
+
 
 dependency_overrides:
   camera_android_camerax: ^0.6.26+2
